# django-unified-response

./: .editorconfig  CHANGELOG.md  README.md  makefile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: changelog.yml  ci.yml  release.yml
src/django_unified_response/: conf.py  decorators.py  exceptions.py  formatters.py  handlers.py  renderers.py  schema.py  utils.py
test_project/api/: urls.py  views.py
test_project/config/: settings.py  urls.py
tests/: conftest.py  settings.py  test_conf.py  test_decorators.py  test_exceptions.py  test_formatters.py  test_handlers.py  test_renderers.py  test_utils.py  urls.py
